# hack-junction

./: .gitmodules  .travis.yml  README.md
lights/: app.js  package.json
qtapp/: .gitignore  CMakeLists.txt  conversion.hpp  expandpath.cpp  expandpath.hpp  imagelabel.hpp  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtapp.pro
thermal-cv/: .gitignore  README.txt
thermal-cv/dev/: makefile
thermal-cv/dev/img/: ir_people_0.tif  ir_people_1_close.tif  ir_people_1_far.tif  ir_people_2.tif
thermal-cv/dev/src/: algos.cpp  driver.cpp  test.cpp
